--- a/index.html
+++ b/index.html
@@ -1,11 +1,50 @@
+
 <!DOCTYPE html>
 <html lang="ja">
 <head>
 <meta charset="utf-8">
-<title>本山のページ</title>
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>本山さんのページ</title>
 </head>
 <body>
-  <h1>こんにちは世界</h1>
-  <p>こんにちはこんにちは</p>
-</body>
+<div id="doc" class="markdown-body container-fluid"><ul>
+<li>
+<p>作品タイトル</p>
+<ul>
+<li>ウサキャッチ</li>
+</ul>
+</li>
+<li>
+<p>プラットフォーム</p>
+<ul>
+<li>スマートフォン</li>
+</ul>
+</li>
+<li>
+<p>作品の概要<br>
+-　落ちてくるうさぎをキャッチしてUFOの妨害を避けながらHOUSEに入れるゲームです<br>
+-　集めたウサギは図鑑登録され、ウサ広場で確認すこともできます<br>
+<img src="https://i.imgur.com/v1qP1jP.png" alt=""></p>
+</li>
+<li>
+<p>開発期間、開発人数</p>
+<ul>
+<li>2か月。4人</li>
+</ul>
+</li>
+<li>
+<p>担当個所</p>
+<ul>
+<li>ゲームのイラスト、UI、BGM</li>
+</ul>
+</li>
+<li>
+<p></p>
+<ul>
+<li>アピール</li>
+</ul>
+</li>
+</ul>世界観です。私が思う可愛いをたくさん詰め込みました！！小さくて色々な種類のうさぎさんを積んで癒されてほしいです！もっといろんなうさぎさんがみたい！となるゲームです</div>
+<video src="usacatch_PV.mp4" autoplay controls></video>
+  </body>
 </html>
