--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <p>作品の概要<br>
 -　落ちてくるうさぎをキャッチしてUFOの妨害を避けながらHOUSEに入れるゲームです<br>
 -　集めたウサギは図鑑登録され、ウサ広場で確認すこともできます<br>
-<img src="skusyo.png" alt=""></p>
+<img src="sukusyo.png" alt=""></p>
 </li>
 <li>
 <p>開発期間、開発人数</p>
@@ -45,6 +45,6 @@
 </ul>
 </li>
 </ul>世界観です。私が思う可愛いをたくさん詰め込みました！！小さくて色々な種類のうさぎさんを積んで癒されてほしいです！もっといろんなうさぎさんがみたい！となるゲームです</div>
-<video src="usacatch_PV.mp4" autoplay controls></video>
+
   </body>
 </html>
