--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <p>作品の概要<br>
 -　落ちてくるうさぎをキャッチしてUFOの妨害を避けながらHOUSEに入れるゲームです<br>
 -　集めたウサギは図鑑登録され、ウサ広場で確認すこともできます<br>
-<img src="./sukusyo.png" alt=""></p>
+<img src="./sukusyo.png" width="50%" height="50%" alt=""></p>
 </li>
 <li>
 <p>開発期間、開発人数</p>
