--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <div id="doc" class="markdown-body container-fluid"><ul>
 <li>
-<p>作品タイトル</p>
+<p><font color="#FCFBE3">作品タイトル</font></p>
 <ul>
 <li>ウサキャッチ</li>
 </ul>
