--- a/index.html
+++ b/index.html
@@ -12,39 +12,39 @@
 <li>
 <p><font color="#FCFBE3">作品タイトル</font></p>
 <ul>
-<li>ウサキャッチ</li>
+<li><font color="#FCFBE3">ウサキャッチ</font></li>
 </ul>
 </li>
 <li>
-<p>プラットフォーム</p>
+<p><font color="#FCFBE3">プラットフォーム</font></p>
 <ul>
-<li>スマートフォン</li>
+<li><font color="#FCFBE3">スマートフォン</font></li>
 </ul>
 </li>
 <li>
-<p>作品の概要<br>
+<p><font color="#FCFBE3">作品の概要</font><br>
 -　落ちてくるうさぎをキャッチしてUFOの妨害を避けながらHOUSEに入れるゲームです<br>
 -　集めたウサギは図鑑登録され、ウサ広場で確認すこともできます<br>
 <img src="./sukusyo.png" width="200px" height="400px" alt=""></p>
 </li>
 <li>
-<p>開発期間、開発人数</p>
+<p><font color="#FCFBE3">開発期間、開発人数</font></p>
 <ul>
-<li>2か月。4人</li>
+<li><font color="#FCFBE3">2か月。4人</font></li>
 </ul>
 </li>
 <li>
-<p>担当個所</p>
+<p><font color="#FCFBE3">担当個所</font></p>
 <ul>
-<li>ゲームのイラスト、UI、BGM</li>
+<li><font color="#FCFBE3">ゲームのイラスト、UI、BGM</font></li>
 </ul>
 </li>
 <li>
 <p></p>
 <ul>
-<li>アピール</li>
+<li><font color="#FCFBE3">アピール</font></li>
 </ul>
 </li>
-</ul>世界観です。私が思う可愛いをたくさん詰め込みました！！小さくて色々な種類のうさぎさんを積んで癒されてほしいです！もっといろんなうさぎさんがみたい！となるゲームです</div>
+</ul><font color="#FCFBE3">世界観です。私が思う可愛いをたくさん詰め込みました！！小さくて色々な種類のうさぎさんを積んで癒されてほしいです！もっといろんなうさぎさんがみたい！となるゲームです</font></div>
  </body>
 </html>
