--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 </li>
 <li>
 <p><font color="#FCFBE3">作品の概要</font><br>
--　落ちてくるうさぎをキャッチしてUFOの妨害を避けながらHOUSEに入れるゲームです<br>
--　集めたウサギは図鑑登録され、ウサ広場で確認すこともできます<br>
+<font color="#FCFBE3">落ちてくるうさぎをキャッチしてUFOの妨害を避けながらHOUSEに入れるゲームです</font><br>
+<font color="#FCFBE3">集めたウサギは図鑑登録され、ウサ広場で確認すこともできます</font><br>
 <img src="./sukusyo.png" width="200px" height="400px" alt=""></p>
 </li>
 <li>
