--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>本山さんのページ</title>
 </head>
- <body bgcolor="#FBCFCF">
+ <body bgcolor="#E2739D">
 <body>
 <div id="doc" class="markdown-body container-fluid"><ul>
 <li>
